@@ -17,6 +17,7 @@ export(ctDensity)
 export(ctDiscretePars)
 export(ctDiscretiseData)
 export(ctFit)
+export(ctFitR)
 export(ctGenerate)
 export(ctGenerateFromFit)
 export(ctIndplot)
