@@ -6,7 +6,7 @@
 \usage{
 Kalman(kpars, datalong, manifestNames, latentNames, imputeMissings = FALSE,
   TDpredNames = NULL, continuoustime = TRUE, timecol = "time",
-  diffusionindices = "all")
+  diffusionindices = "all", optimize = FALSE, bernoulli = FALSE)
 }
 \arguments{
 \item{kpars}{list object containing DRIFT,T0VAR,DIFFUSION,CINT,T0MEANS,TDPREDEFFECT,
@@ -33,9 +33,12 @@ Refers only to latent states, observations are always at discrete time points.}
 of numeric values from row 1 to row n. Ignored if continuoustime=FALSE.}
 
 \item{diffusionindices}{vector of integers denoting which latent variables are involved in covariance calcs.}
+
+\item{optimize}{Set to TRUE when using for optimization.}
 }
 \value{
-Returns a list containing matrix objects etaprior, etaupd, etasmooth, y, yprior, 
+When optimize=TRUE, returns log likelihood. Else, 
+returns a list containing matrix objects etaprior, etaupd, etasmooth, y, yprior, 
 yupd, ysmooth, prederror, time, loglik,  with values for each time point in each row. 
 eta refers to latent states and y to manifest indicators - y itself is thus just 
 the input data. 
