@@ -1,6 +1,11 @@
 ctsem news:
 
 Known bugs / limitations:
+None.
+
+- More robust data import, character string id's and jumbled up order of rows now manageable.
+- stanWplot no longer requires shiny to be explicitly loaded.
+- Fix bug in ctKalman plotting function preventing interpolation.
 
 27/9/2017
 #### 2.5.0 ####
